Report chnages commited in local branch

--- a/src/app/modules/reports/reportslist.component.html
+++ b/src/app/modules/reports/reportslist.component.html
@@ -43,8 +43,7 @@
               <span class="card-title grey-text text-darken-4">Employee Details<i class="material-icons right">close</i></span>
               <p>This report contains detailed information about employees viz., joining, status, skills, organizational details and experience. It also contains specific personal information like contact details, dependent and certifications. This report is only available for HR and RMG departments.</p>
             </div>
-            <div class="card-action">
-              <button class="btn-flat"><a [routerLink]="['R-Reports-View', {id :'EmployeeDetail'}]" >Employee Details Report </a></button>
+            <div class="card-action"><a class="btn-flat" routerLink="/employee/reports/view/EmployeeDetail">Employee Details Report</a>
             </div>
             <div class=""></div>
           </div>
@@ -61,8 +60,7 @@
               <span class="card-title grey-text text-darken-4">Leaves<i class="material-icons right">close</i></span>
               <p>Leave reports provide you detailed insights about leaves applied, leave plans and balance available. Additionally, you can also find Leave Ledger Report and Leave Transaction Report. Select any specific date range/Delivery Unit or filters available for particular Reports.</p>
             </div>
-            <div class="card-action">
-              <button class="btn-flat"><a [routerLink]="['R-Reports-View', {id :'Leaves'}]" >Leave Report</a></button>
+            <div class="card-action"><a class="btn-flat" routerLink="/employee/reports/view/Leaves">Leave Report</a>
             </div>
             <div class=""></div>
           </div>
@@ -81,8 +79,7 @@
                 layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to
                 using 'Content here, content here', making it look like readable English.</p>
             </div>
-            <div class="card-action">
-              <button class="btn-flat">Expenses Report</button>
+            <div class="card-action"><a class="btn-flat" routerLink="/employee/reports/view/Expenses">Expense Report</a>
             </div>
             <div class="overlay-upcoming"></div>
           </div>
@@ -99,8 +96,7 @@
                                     <span class="card-title grey-text text-darken-4">HelpDesk<i class="material-icons right">close</i></span>
                                     <p>Helpdesk Report</p>
                                 </div>
-                                <div class="card-action">
-                                   <button class="btn-flat"><a [routerLink]="['R-Reports-View', {id :'Helpdesk'}]" >Helpdesk Report</a></button>
+                                <div class="card-action"><a class="btn-flat" routerLink="/employee/reports/view/Helpdesk">Helpdesk Report</a>
                                 </div>
                                 <div class=""></div>
                             </div>
@@ -120,8 +116,7 @@
                 for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years,
                 sometimes by accident, sometimes on purpose (injected humour and the like).</p>
             </div>
-            <div class="card-action">
-              <button class="btn-flat">Confirmations Report</button>
+            <div class="card-action"><a class="btn-flat" routerLink="/employee/reports/view/Confirmations">Confirmation Report</a>
             </div>
             <div class="overlay-upcoming"></div>
           </div>
@@ -141,8 +136,7 @@
                 looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites
                 of the word in classical literature, discovered the undoubtable source.</p>
             </div>
-            <div class="card-action">
-              <button class="btn-flat">Separations Report</button>
+            <div class="card-action"><a class="btn-flat" routerLink="/employee/reports/view/Separations">Separations Report</a>
             </div>
             <div class="overlay-upcoming"></div>
           </div>
@@ -161,8 +155,7 @@
                 by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance.
                 The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.</p>
             </div>
-            <div class="card-action">
-              <button class="btn-flat">Appraisals Report</button>
+            <div class="card-action"><a class="btn-flat" routerLink="/employee/reports/view/Appraisals">Appraisals Report</a>
             </div>
             <div class="overlay-upcoming"></div>
           </div>
@@ -181,8 +174,7 @@
                 by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage
                 of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text.</p>
             </div>
-            <div class="card-action">
-              <button class="btn-flat">Travel Report</button>
+            <div class="card-action"><a class="btn-flat" routerLink="/employee/reports/view/Travel">Travel Report</a>
             </div>
             <div class="overlay-upcoming"></div>
           </div>
