--- a/src/app/modules/leave/leave.component.html
+++ b/src/app/modules/leave/leave.component.html
@@ -28,42 +28,42 @@
 				<li class="tab">
 					<a href="#leaves-applied" class="applied-color">
 						<h5 class="margin-zero">{{leavesApplied}}</h5>
-						<h6>Leaves Applied</h6>
+						<h6> Leaves (Applied) </h6>
 						<div class="applied-border"></div>
 					</a>
 				</li>
 				<li class="tab">
 					<a href="#remaining-leaves" class="available-color">
 						<h5 class="margin-zero">{{remainingLeaves}}</h5>
-						<h6>Leaves Available</h6>
+						<h6> Leaves (Available) </h6>
 						<div class="available-border"></div>
 					</a>
 				</li>
 				<li class="tab tds" *ngIf="compOffConsumed!=0">
 					<a href="#comp-off-number" class="comp-off-color">
 						<h5 class="margin-zero">{{compOffConsumed}}</h5>
-						<h6>Comp Off Consumed</h6>
+						<h6> Comp Off (Consumed) </h6>
 						<div class="comp-off-border"></div>
 					</a>
 				</li>
 				<li class="tab tds" *ngIf="CompOffAvailable!=0">
 					<a href="#comp-off-number" class="compoff-avail-color">
 						<h5 class="margin-zero">{{CompOffAvailable}}</h5>
-						<h6>Comp Off Available</h6>
+						<h6> Comp Off (Available) </h6>
 						<div class="compoff-avail-border"></div>
 					</a>
 				</li>
 				<li class="tab" *ngIf="leavesConsumed!=0">
 					<a href="#leaves-consumed" class="consumed-color">
 						<h5 class="margin-zero">{{leavesConsumed}}</h5>
-						<h6>Leaves Consumed</h6>
+						<h6> Leaves (Consumed) </h6>
 						<div class="consumed-border"></div>
 					</a>
 				</li>
 				<li class="tab tds" *ngIf="LWP!=0">
 					<a href="#leave-without-pay" class="absent-color">
 						<h5 class="margin-zero">{{LWP}}</h5>
-						<h6>Leave Without Pay (LWP)</h6>
+						<h6> Leave Without Pay (LWP) </h6>
 						<div class="absent-border"></div>
 					</a>
 				</li>
