--- a/src/app/modules/reports/reportslist.component.html
+++ b/src/app/modules/reports/reportslist.component.html
@@ -102,7 +102,7 @@
                                 <div class="card-action">
                                    <button class="btn-flat"><a [routerLink]="['R-Reports-View', {id :'Helpdesk'}]" >Helpdesk Report</a></button>
                                 </div>
-                                <div class=""></div>
+                                <div class="overlay-upcoming"></div>
                             </div>
                         </div>
 
