Quick fixfor build

--- a/src/app/modules/approvals/profile/profile.approvallist.html
+++ b/src/app/modules/approvals/profile/profile.approvallist.html
@@ -19,7 +19,7 @@
             <div class="approvals">
                 <div class="reimbursement-wrapper approvals-data">
 
-                    <basic-grid [(source)]='employeeData' gridPagination='bottom' gridOptions='{"colWidths":[100,25,20,30],"widthType":"%","useScroll":true}'
+                    <basic-grid [(source)]='employeeData' gridPagination='bottom' gridOptions='{"colWidths":[100,25,20,30],"widthType":"%","useScroll":false}'
                         [isHeaderVisible]=false>
                         <basic-cell cell='' headerLabel=''>
                             <!--<repeater [source]='employeeData' >-->
