--- a/src/app/modules/reports/viewreports.component.html
+++ b/src/app/modules/reports/viewreports.component.html
@@ -45,7 +45,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col s12 m6 l3">
+                                <!--<div class="col s12 m6 l3">
                                     <div class="card padding-zero margin-zero">
                                         <div class="row heading-content">
                                             <div class="col s12 card-heading m-top20">
@@ -63,7 +63,7 @@
                                             <a (click)="SetLeaveReport($event,'LeaveSummary')" class="btn-flat">Leave Ledger Summary Report</a>
                                         </div>
                                     </div>
-                                </div>
+                                </div>-->
                                 <div class="col s12 m6 l3">
                                     <div class="card padding-zero margin-zero">
                                         <div class="row heading-content">
