--- a/src/app/modules/approvals/compoff/compoff.approval.html
+++ b/src/app/modules/approvals/compoff/compoff.approval.html
@@ -1,7 +1,7 @@
 <div class="breadcrumb-nav">
     <div class="row margin-zero">
         <div class="col s12">
-            <h5>Leave Request for Approval
+            <h5>Compensatory Off Approvals
                 <a href="vibrant_web_help/help-landing-page.html" target="_blank" title="Help" class="help-btn">
                     <i class="right fa fa-question-circle" aria-hidden="true"></i></a>
             </h5>
