--- a/src/app/modules/travel/travel.history.template.html
+++ b/src/app/modules/travel/travel.history.template.html
@@ -26,7 +26,7 @@
                             <template #bg let-item='row'>
                                 <div class="approvals-wrapper">
                                     <div class="row m-bottom0 valign-wrapper padding-15-0">
-                                        <div class="col s12 m6 l2"><span class="expense-label hide-on-large-only">Req ID</span>{{item.id}}</div>
+                                        <div class="col s12 m6 l2"><span class="expense-label hide-on-large-only">Req ID</span>TR{{item.id}}</div>
                                         <div class="col s12 m6 l2"><span class="expense-label hide-on-large-only">Travel Title</span>{{item.travelTitle}}</div>
                                         <div class="col s12 m6 l3"><span class="expense-label hide-on-large-only">Travel Details</span>
                                             <div class="valign-wrapper">
