--- a/src/app/modules/travel/travel.approval.history.template.html
+++ b/src/app/modules/travel/travel.approval.history.template.html
@@ -52,7 +52,7 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class="col s12 m6 l1"><span class="expense-label hide-on-large-only">Req ID</span>{{item.id}}</div>
+                                        <div class="col s12 m6 l1"><span class="expense-label hide-on-large-only">Req ID</span>TR{{item.id}}</div>
                                         <div class="col s12 m6 l1"><span class="expense-label hide-on-large-only">Travel Title</span>{{item.travelTitle}}</div>
                                         <div class="col s12 m6 l3"><span class="expense-label hide-on-large-only">Travel Details</span>
                                             <div class="valign-wrapper">
