--- a/src/app/modules/travel/travel.view.my.history.template.html
+++ b/src/app/modules/travel/travel.view.my.history.template.html
@@ -36,7 +36,7 @@
             <div class="approvals">
                 <div class="approvals-wrapper">
                     <div class="row m-bottom0 valign-wrapper">
-                        <div class="col s12 m6 l2"><span class="expense-label hide-on-large-only">Req ID</span>{{travelModel.id}}</div>
+                        <div class="col s12 m6 l2"><span class="expense-label hide-on-large-only">Req ID</span>TR{{travelModel.id}}</div>
                         <div class="col s12 m6 l2"><span class="expense-label hide-on-large-only">Travel Title</span>{{travelModel.travelTitle}}</div>
                         <div class="col s12 m6 l3"><span class="expense-label hide-on-large-only">Travel Details</span>
                             <div class="valign-wrapper">
