--- a/src/app/modules/travel/travel.view.request.template.html
+++ b/src/app/modules/travel/travel.view.request.template.html
@@ -64,7 +64,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col s12 m6 l1"><span class="expense-label hide-on-large-only">Req ID</span>{{travelModel.id}}</div>
+                            <div class="col s12 m6 l1"><span class="expense-label hide-on-large-only">Req ID</span>TR{{travelModel.id}}</div>
                             <div class="col s12 m6 l1"><span class="expense-label hide-on-large-only">Travel Title</span>{{travelModel.travelTitle}}</div>
                             <div class="col s12 m6 l2"><span class="expense-label hide-on-large-only">Travel Details</span>
                                 <div class="valign-wrapper">
