--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,7 @@
         </ul>
         <sidenav-button [isActive]=isNavActive (click)="toggle($event)"></sidenav-button>
         <h5 class="header-title">
-            <a [routerLink]="my/dashboard"><img src="/assets/images/logo-img.png" class="header-logo responsive-img"> VIBRANT <span>WEB </span></a>
+            <a [routerLink]="['']"><img src="/assets/images/logo-img.png" class="header-logo responsive-img"> VIBRANT <span>WEB </span></a>
             <div style='background:#494342;padding: 0 10px; display: inline-flex; height: 50px;'>
                 <span>Impersonate : </span>
                 <span><input type='number' [(ngModel)]='impersonate' /></span>
