--- a/src/app/modules/reports/viewreports.component.html
+++ b/src/app/modules/reports/viewreports.component.html
@@ -1,6 +1,26 @@
 <div class="breadcrumb-nav">
     <div class="row margin-zero">
-        <div class="col s12">
+        <div class="col s12" *ngIf="selectedReport=='AttendanceDetail'">
+            <h5> Attendance and SISO Report
+                <!--<a target="_blank" title="Help" class="help-btn"><i class="right fa fa-question-circle" aria-hidden="true"></i></a>--></h5>
+        </div>
+        <div class="col s12" *ngIf="selectedReport=='LeaveSummary'">
+            <h5>Leave Ledger Summary Report
+                <!--<a target="_blank" title="Help" class="help-btn"><i class="right fa fa-question-circle" aria-hidden="true"></i></a>--></h5>
+        </div>
+        <div class="col s12" *ngIf="selectedReport=='LeaveTransaction'">
+            <h5>Leave Transaction Report
+                <!--<a target="_blank" title="Help" class="help-btn"><i class="right fa fa-question-circle" aria-hidden="true"></i></a>--></h5>
+        </div>
+        <div class="col s12" *ngIf="selectedReport=='LeaveDetail'">
+            <h5>Leave Detail Report
+                <!--<a target="_blank" title="Help" class="help-btn"><i class="right fa fa-question-circle" aria-hidden="true"></i></a>--></h5>
+        </div>
+         <div class="col s12" *ngIf="selectedReport=='siso'">
+            <h5>Sign In Sign Out Summary Report
+                <!--<a target="_blank" title="Help" class="help-btn"><i class="right fa fa-question-circle" aria-hidden="true"></i></a>--></h5>
+        </div>
+         <div class="col s12" *ngIf="selectedReport=='Helpdesk' || selectedReport=='Expense' || selectedReport=='Attendance'">
             <h5>{{selectedReport}} Report
                 <!--<a target="_blank" title="Help" class="help-btn"><i class="right fa fa-question-circle" aria-hidden="true"></i></a>--></h5>
         </div>
@@ -9,9 +29,14 @@
 
 
 <div class="row  m-bottom0 report-container">
-    <div class="row back-btn-reports" *ngIf="selectedReport=='LeaveSummary' || selectedReport=='LeaveDetail' || selectedReport=='LeaveTransaction'  ">
+    <div class="row back-btn-reports" *ngIf="selectedReport=='LeaveSummary' || selectedReport=='LeaveDetail' || selectedReport=='LeaveTransaction' ">
         <div class="col s12 padding-zero">
             <a (click)="BackToLeaveReport($event)" class="waves-effect waves-light btn back-btn"><i class="fa fa-angle-left left" title="Back to Leave Report" aria-hidden="true"></i>Back</a>
+        </div>
+    </div>
+     <div class="row back-btn-reports" *ngIf="selectedReport=='Attendance' || selectedReport=='siso'">
+        <div class="col s12 padding-zero">
+            <a (click)="BackToAttendanceReport($event)" class="waves-effect waves-light btn back-btn"><i class="fa fa-angle-left left" title="Back to Leave Report" aria-hidden="true"></i>Back</a>
         </div>
     </div>
     <div *ngIf="selectedReport=='Leaves'" class="row">
@@ -91,6 +116,68 @@
         </div>
     </div>
 
+
+      <div *ngIf="selectedReport=='AttendanceDetail'" class="row">
+        <!-- <a (click)="SetLeaveReport($event,'LeaveSummary')" class="btn waves-effect waves-light">Leave Summary</a>
+        <a (click)="SetLeaveReport($event,'LeaveDetail')" class="btn waves-effect waves-light">Leave Detail</a>-->
+        <div class="grey-bg-wrapper">
+            <div class="help-container">
+                <div class="help-content-wrapper m-top20">
+                    <div class="help-head leave-head">
+                        <h3 class="help-head-text">Reports</h3>
+                    </div>
+                    <div class="row  margin-zero">
+                        <div class="col s12 padding-zero">
+                            <div class="row m-top20">
+                                <div class="col s12 m6 l3">
+                                    <div class="card padding-zero margin-zero">
+                                        <div class="row heading-content m-top20">
+                                            <div class="col s12 card-heading">
+                                                <span class="card-title">Attendance</span>
+                                            </div>
+                                        </div>
+                                        <div class="row">
+                                            <div class="col s12">
+                                                <div class="view-form-info">
+                                                    <p></p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="data-footer">
+                                            <a (click)="SetLeaveReport($event,'Attendance')" class="btn-flat">Attendance Report</a>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col s12 m6 l3">
+                                    <div class="card padding-zero margin-zero">
+                                        <div class="row heading-content">
+                                            <div class="col s12 card-heading m-top20">
+                                                <span class="card-title">Sign In Sign Out Summary</span>
+                                            </div>
+                                        </div>
+                                        <div class="row">
+                                            <div class="col s12">
+                                                <div class="view-form-info">
+                                                    <p></p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="data-footer">
+                                            <a (click)="SetLeaveReport($event,'siso')" class="btn-flat">Sign In Sign Out Summary Report</a>
+                                        </div>
+                                    </div>
+                                </div>
+                               
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
     <div *ngIf="selectedReport=='Attendance'" class="row m-bottom0 header m-top20">
         <div class="col s12 padding-zero">
             <div class="row m-bottom0 valign-wrapper">
@@ -142,6 +229,62 @@
         </div>
 
     </div>
+
+
+  <div *ngIf="selectedReport=='siso'" class="row m-bottom0 header m-top20">
+        <div class="col s12 padding-zero">
+            <div class="row m-bottom0 valign-wrapper">
+                <div class="col s12 l6">
+                    <ui-form #sisoReportForm [controlMetas]="sisoHub" [model]="sisoModel" [formReadonly]='false' [errorOnlyOnSubmit]='cardSubmitted'
+                        formCss='' controlCss='' columnOrientation='3' inputLabelPosition='top'>
+
+                        <ui-control-item for='StartDate' behaviours='[ {"name":"max","value":"{{sisoModel.EndDate}}:mm/dd/yyyy:1"}]' depends='["EndDate:changeattrs"]'
+                            changeattrs='["max"]'>
+                        </ui-control-item>
+
+                        <ui-control-item for='EndDate' behaviours='[ {"name":"min","value":"{{sisoModel.StartDate}}:mm/dd/yyyy"}]' depends='["StartDate:changeattrs"]'
+                            changeattrs='["min"]'>
+                        </ui-control-item>
+                    </ui-form>
+
+                </div>
+                <div class="col s12 l6">
+                    <a (click)="ViewReport($event,sisoModel,sisoReportForm)" class="waves-effect waves-light btn custom-btn save-as-draft">Get Report</a>
+                </div>
+            </div>
+            <div class="row m-bottom10" *ngIf="showCriteria">
+                <div class="col s12">
+                    <div class="report-details">
+                        <h5>Report Criteria</h5>
+                        <div class="row">
+                            <div class="col s12 m2 l2 padding-zero">
+                                <div class="view-form-info">
+                                    <h5 *ngIf="sisoModel.StartDate">{{sisoModel.StartDate}}</h5>
+                                    <h6 *ngIf="sisoModel.StartDate">Start Date</h6>
+                                </div>
+                            </div>
+                            <div class="col s12 m2 l2 padding-zero">
+                                <div class="view-form-info">
+                                    <h5 *ngIf="sisoModel.EndDate">{{sisoModel.EndDate}}</h5>
+                                    <h6 *ngIf="sisoModel.EndDate">End Date</h6>
+                                </div>
+                            </div>
+                            <div class="col s12 m2 l2 padding-zero">
+                                <div class="view-form-info">
+                                    <h5>{{sisoModel.Employeecode}}</h5>
+                                    <h6 *ngIf="sisoModel.Employeecode">Employee Code</h6>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </div>
+
+
+
 
     <div *ngIf="selectedReport=='EmployeeDetail'" class="row m-bottom0 header m-top20">
         <div class="col s12 padding-zero">
