Various changes for travel module

--- a/src/app/modules/travel/travel.history.template.html
+++ b/src/app/modules/travel/travel.history.template.html
@@ -49,7 +49,7 @@
                                             </div>
                                             <div class="right">
                                                 <a routerLink="/my/travel/view/{{item.id}}" class="expense-icon"><img src="assets/images/view-icon.svg" class="view-icon" title="View Request"></a>
-                                                <!--<a class="expense-icon modal-trigger"><img [src]="item.travelExtensionImageUrl" class="view-icon" title="Travel Extension"></a>-->
+                                                <a href="#/travel/extension/{{item.id}}" class="expense-icon modal-trigger"><img [src]="item.travelExtensionImageUrl" class="view-icon" title="Travel Extension"></a>
                                             </div>
                                         </div>
                                     </div>
