--- a/src/app/modules/travel/travel.view.my.history.template.html
+++ b/src/app/modules/travel/travel.view.my.history.template.html
@@ -1,8 +1,8 @@
 <div class="breadcrumb-nav">
     <div class="row margin-zero">
         <div class="col s12">
-            <h5>Travel
-                <a href="vibrant_web_help/help-landing-page.html" target="_blank" title="Help" class="help-btn">
+            <h5>My Travel History - Details
+                <a href="/vibranthelp/help-landing-page.html" target="_blank" title="Help" class="help-btn">
                     <i class="right fa fa-question-circle" aria-hidden="true"></i></a>
             </h5>
         </div>
@@ -60,7 +60,7 @@
                                 </status-step>
                             </div>
                             <div [ngClass]="{toDisplayNone : showClosingForm}" class="right">
-                                <a href="" (click)="OpenTravelExtension($event,travelModel)" class="expense-icon modal-trigger"><img [src]="travelModel.travelExtensionImageUrl" class="view-icon" title="Travel Extension"></a>
+                                <a href="#/travel/extension/{{travelModel.id}}"class="expense-icon modal-trigger"><img [src]="travelModel.travelExtensionImageUrl" class="view-icon" title="Travel Extension"></a>
                             </div>
                         </div>
                     </div>
@@ -374,6 +374,20 @@
                                                         <div class="view-form-info">
                                                             <h6>Travel Preferences (if any)</h6>
                                                             <p>{{travelModel.travelDetails.additionalInformation}}</p>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                                <div class="row">
+                                                    <div class="col s6">
+                                                        <div class="view-form-info">
+                                                            <h5>{{travelModel.travelDetails.mealPreference.description}}</h5>
+                                                            <h6>Meal Preference</h6>
+                                                        </div>
+                                                    </div>
+                                                    <div class="col s6">
+                                                        <div class="view-form-info">
+                                                            <h5>{{travelModel.travelDetails.seatLocationPreference.description}}</h5>
+                                                            <h6>Seat Location Preference</h6>
                                                         </div>
                                                     </div>
                                                 </div>
