--- a/src/app/modules/travel/travel.view.request.template.html
+++ b/src/app/modules/travel/travel.view.request.template.html
@@ -2,7 +2,7 @@
     <div class="row margin-zero">
         <div class="col s12">
             <h5>Travel Details for Approval
-                <a href="vibrant_web_help/help-landing-page.html" target="_blank" title="Help" class="help-btn">
+                <a href="/vibranthelp/help-landing-page.html" target="_blank" title="Help" class="help-btn">
                     <i class="right fa fa-question-circle" aria-hidden="true"></i></a>
             </h5>
         </div>
@@ -1318,6 +1318,20 @@
                                                     </div>
                                                 </div>
                                             </div>
+                                            <div class="row">
+                                                    <div class="col s6">
+                                                        <div class="view-form-info">
+                                                            <h5>{{travelModel.travelDetails.mealPreference.description}}</h5>
+                                                            <h6>Meal Preference</h6>
+                                                        </div>
+                                                    </div>
+                                                    <div class="col s6">
+                                                        <div class="view-form-info">
+                                                            <h5>{{travelModel.travelDetails.seatLocationPreference.description}}</h5>
+                                                            <h6>Seat Location Preference</h6>
+                                                        </div>
+                                                    </div>
+                                                </div>
                                     </div>
                                 </div>
                             </div>
