--- a/src/app/modules/travel/travel.view.request.template.html
+++ b/src/app/modules/travel/travel.view.request.template.html
@@ -215,7 +215,7 @@
                                             </div>
                                             <div class="row display-flex m-top20">
                                                 <div class="col s12 l6">
-                                                    <ui-form #flightCostForm [controlMetas]="flightCostDetailHub" [(model)]="flightCostDetail" [errorOnlyOnSubmit]='flightFormSubmit'
+                                                    <ui-form #flightCostForm [controlMetas]="flightCostDetailHub" [(model)]="flightCostDetail" [errorOnlyOnSubmit]=''
                                                         [formReadonly]='false' formCss='' columnOrientation='2' inputLabelPosition='top'
                                                         controlCss='view-form-info'>
                                                     </ui-form>
@@ -235,7 +235,7 @@
                                                 <div class="row valign-wrapper margin-zero">
                                                     <div class="col s12 m12 l6 right-align">
                                                         <a class="waves-effect waves-light btn custom-btn cancel" title="Cancel" (click)="ResetFlightForm()">Cancel</a>
-                                                        <i class="waves-effect waves-light btn custom-btn submit waves-input-wrapper" style=""><input (click)="SaveFlight(flightForm,flightDetailFormOne,flightDetailFormTwo,flightCostForm)" class="waves-button-input" type="submit" title="Submit" value="Submit" name="action"></i>
+                                                        <i class="waves-effect waves-light btn custom-btn submit waves-input-wrapper"><input (click)="SaveFlight(flightForm,flightDetailFormOne,flightDetailFormTwo,flightCostForm)" class="waves-button-input" type="submit" title="Submit" value="Submit" name="action"></i>
                                                     </div>
                                                 </div>
                                             </div>
@@ -530,7 +530,7 @@
                                                                         <div class="row">
                                                                             <div class="col s12">
                                                                                 <div class="view-form-info">
-                                                                                    <h5>$ {{item.baseFare}}</h5>
+                                                                                    <h5>{{item.baseFare}}</h5>
                                                                                     <h6>Base Fare</h6>
                                                                                 </div>
                                                                             </div>
@@ -540,7 +540,7 @@
                                                                         <div class="row">
                                                                             <div class="col s12">
                                                                                 <div class="view-form-info">
-                                                                                    <h5>$ {{item.taxes}}</h5>
+                                                                                    <h5> {{item.taxes}}</h5>
                                                                                     <h6>Taxes</h6>
                                                                                 </div>
                                                                             </div>
@@ -552,7 +552,7 @@
                                                                         <div class="row">
                                                                             <div class="col s12">
                                                                                 <div class="view-form-info">
-                                                                                    <h5>$ {{item.grandTotal}}</h5>
+                                                                                    <h5> {{item.grandTotal}}</h5>
                                                                                     <h6>Grand Total</h6>
                                                                                 </div>
                                                                             </div>
@@ -562,7 +562,7 @@
                                                                         <div class="row">
                                                                             <div class="col s12">
                                                                                 <div class="view-form-info">
-                                                                                    <h5>$ {{item.changePenalty}}</h5>
+                                                                                    <h5> {{item.changePenalty}}</h5>
                                                                                     <h6>Change Penalty</h6>
                                                                                 </div>
                                                                             </div>
@@ -574,7 +574,7 @@
                                                                         <div class="row">
                                                                             <div class="col s12">
                                                                                 <div class="view-form-info">
-                                                                                    <h5>$ {{item.cancellationCharges}}</h5>
+                                                                                    <h5> {{item.cancellationCharges}}</h5>
                                                                                     <h6>Cancellation Charges</h6>
                                                                                 </div>
                                                                             </div>
