--- a/src/app/modules/helpdesk/helpdesk.component.html
+++ b/src/app/modules/helpdesk/helpdesk.component.html
@@ -16,8 +16,8 @@
     <div class="col s12 tab-control padding-zero">
       <div class="col s12 m8 l5 padding-zero">
         <ul class="tabs app-tabs" style="width: 100%;">
-          <li class="tab col s3"><a [routerLink]="['newticket']" routerLinkActive="router-link-active">REPORT ISSUE</a></li>
-          <li class="tab col s3"><a routerLink="/my/helpdesk/ticketlist/0" routerLinkActive="router-link-active">MY ISSUES</a></li>
+          <li class="tab col s3"><a [routerLink]="['newticket']" routerLinkActive="router-link-active">NEW TICKET</a></li>
+          <li class="tab col s3"><a routerLink="/my/helpdesk/ticketlist/0" routerLinkActive="router-link-active">MY TICKETS</a></li>
           <li class="tab col s3" *ngIf="isApprover"><a [routerLink]="['newapproval']" routerLinkActive="router-link-active">HELPDESK REQUESTS</a></li>
           <!--<li class="tab col s3" *ngIf="isApprover"><a >HELPDESK HISTORY</a></li>-->
         </ul>
